# MFI-Heterogeneous-tumors

./: .gitignore  README.MD  pyproject.toml
non_spatial/: NonSpatialFusion.py  parametrization.py  plot_results.py  run_analysis.py  run_decay_treatment_demo.py  run_experiments.py  run_fusion_vs_no_fusion_mc.py
non_spatial/monte_carlo/: monte_carlo.py  monte_carlo_analysis.py  test_monte_carlo.py  visualization.py
non_spatial_no_chemotherapy/: NonSpatialFusion.py  __init__.py  parametrization.py  plot_results.py  run_analysis.py  run_experiments.py
notebooks/: __init__.py
notebooks/monte_carlo/: __init__.py  monte_carlo_param_sweep.py  monte_carlo_param_sweep_analysis.py
output/: __init__.py
tests/: __init__.py  collect_param_analytics.py  test_monte_carlo.py  test_monte_carlo_param_sweep.py  test_monte_carlo_param_sweep_analysis.py  test_plot_results.py
tests/test_files/: LineageNone.csv  MetricsNone.csv  __init__.py
tests/test_files/param_sweep_6/fusion_rate=0.0001042_mutation_rate_per_gene=0/: lineage_data.parquet  metrics_data.parquet
tests/test_files/param_sweep_6/fusion_rate=0.0001042_mutation_rate_per_gene=1e-05/: genotypes_data.parquet  lineage_data.parquet
tests/test_files/param_sweep_6/fusion_rate=0.0002083_mutation_rate_per_gene=0/: genotypes_data.parquet
tests/test_files/param_sweep_6/fusion_rate=0.0002083_mutation_rate_per_gene=1e-05/: lineage_data.parquet  (+1 more)
tests/test_files/test_monte_carlo/: __init__.py  genotypes_data.parquet
tests/test_output/: __init__.py  param_analytics.txt
tests/test_output/param_sweep_3/: sweep_metadata.json
(+339 files in other folders)
